--- a/css/styles.css
+++ b/css/styles.css
@@ -2471,32 +2471,32 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #00b1b1;
-  border-color: #00b1b1;
+  background-color: var(--dark);
+  border-color: var(--dark);
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
+  background-color: #8bdbdb;
+  border-color: #8bdbdb;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #fec810;
-  border-color: #fec503;
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  background-color: #8bdbdb;
+  border-color: #8bdbdb;
+  box-shadow: 0 0 0 0.2rem var(--primary);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #00b1b1;
-  border-color: #00b1b1;
+  background-color: var(--dark);
+  border-color: var(--dark);
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #fec503;
-  border-color: #f3bd01;
+  background-color: #8bdbdb;
+  border-color: #8bdbdb;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(254, 216, 84, 0.5);
+  box-shadow: 0 0 0 0.2rem var(--primary);
 }
 
 .btn-secondary {
@@ -10139,7 +10139,6 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
   background-image: url("../assets/img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10147,6 +10146,7 @@ header.masthead {
   background-size: cover;
 }
 header.masthead .masthead-subheading {
+  color: var(--dark);
   font-size: 1.5rem;
   font-style: italic;
   line-height: 1.5rem;
@@ -10154,6 +10154,7 @@ header.masthead .masthead-subheading {
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 header.masthead .masthead-heading {
+  color: var(--primary);
   font-size: 3.25rem;
   font-weight: 700;
   line-height: 3.25rem;
@@ -10451,7 +10452,7 @@ section#contact {
   background-position: center;
 }
 section#contact .section-heading {
-  color: #fff;
+  color: black;
 }
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
