--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ body {
   background-color: #fff;
 }
 
+.section-heading {
+  color: #004C4D;
+}
+
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
 }
@@ -10054,6 +10058,7 @@ img::-moz-selection {
   justify-content: center;
   padding: 0;
   border-radius: 100%;
+  color: white;
 }
 
 #mainNav {
@@ -10441,9 +10446,7 @@ section#contact {
   background-repeat: no-repeat;
   background-position: center;
 }
-section#contact .section-heading {
-  color: black;
-}
+
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
 }
