--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ body {
   background-color: #fff;
 }
 
+#knowledge {
+  text-align: center;
+}
+
 .section-heading {
   color: #004C4D;
 }
@@ -211,6 +215,7 @@ svg {
 }
 
 table {
+  margin-left: 2rem;
   border-collapse: collapse;
 }
 
@@ -224,6 +229,7 @@ caption {
 
 th {
   text-align: inherit;
+  font-weight: normal;
 }
 
 label {
@@ -2909,6 +2915,7 @@ fieldset:disabled a.btn {
   color: #00b1b1;
   text-decoration: none;
   text-align: left;
+  font-size: 1.5rem;
 }
 .btn-link:hover {
   color: #004C4D;
@@ -10192,7 +10199,7 @@ header.masthead .masthead-heading {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(254, 209, 54, 0.9);
+  background: var(--light);
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -10259,6 +10266,46 @@ header.masthead .masthead-heading {
 }
 .portfolio-modal .close-modal:hover {
   opacity: 0.3;
+}
+
+.modal-body > h5 {
+  color: var(--dark);
+}
+
+ul.timeline {
+  list-style-type: none;
+  position: relative;
+}
+ul.timeline:before {
+  content: ' ';
+  background: #d4d9df;
+  display: inline-block;
+  position: absolute;
+  left: 29px;
+  width: 2px;
+  height: 100%;
+  z-index: 400;
+}
+ul.timeline > li {
+  margin: 20px 0;
+  padding-left: 20px;
+  text-align: left;
+}
+ul.timeline > li:before {
+  content: ' ';
+  background: white;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 3px solid #22c0e8;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  z-index: 400;
+}
+
+ul.timeline > li > h6 {
+  color: var(--primary);
 }
 
 .timeline {
