--- a/css/styles.css
+++ b/css/styles.css
@@ -10387,5 +10387,28 @@ ul.timeline > li:before {
 }
 
 b {
-  color: var(--primary)
+  color: var(--primary);
+}
+
+.about-button:hover > h4 {
+  color: var(--light) !important;
+}
+
+.about-button:hover {
+  cursor: pointer;
+}
+
+.about-button:focus {
+  cursor: pointer;
+}
+
+.about-button:focus > h4 {
+  text-decoration: underline;
+}
+
+.about-button-subheading {
+  font-size: 1rem;
+  font-weight: 400;
+  font-style: italic;
+  font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
