--- a/css/styles.css
+++ b/css/styles.css
@@ -10428,3 +10428,10 @@ b {
 .dentist-group > h5 {
   color: var(--dark);
 }
+
+.contact-map {
+  width: 80%;
+  height: 300px;
+  border:0; 
+  margin-top:0.5rem;
+}
