--- a/css/styles.css
+++ b/css/styles.css
@@ -10438,3 +10438,21 @@ b {
   border:0; 
   margin-top:0.5rem;
 }
+
+.knowledge-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 480px;
+  margin-bottom: 30px;
+}
+
+li {
+  padding-left: 10px;
+}
+
+.modal-subheading {
+  margin-top: 1.5rem !important;
+  font-weight: 400;
+  font-style: italic;
+}
