--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,10 @@ h6 {
 }
 
 p {
+    font-size: 1rem;
     margin-top: 0;
     margin-bottom: 1rem;
+    line-height: 1.75rem;
 }
 
 abbr[title],
@@ -10115,10 +10117,6 @@ body {
     overflow-x: hidden;
 }
 
-p {
-    line-height: 1.75;
-}
-
 .page-section {
     padding: 6rem 0;
 }
@@ -10389,8 +10387,6 @@ header.masthead .masthead-heading {
     font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.portfolio-modal .modal-content p {}
-
 .portfolio-modal .modal-content ul.list-inline {
     margin-bottom: 2rem;
 }
@@ -10611,6 +10607,8 @@ b {
 
 li {
     padding-left: 10px;
+    line-height: 1.75rem;
+    font-size: 1rem;
 }
 
 .modal-subheading {
@@ -10625,4 +10623,13 @@ li {
 
 .semi-small-box-shadow {
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+}
+
+.section-subheading-normal {
+    margin-top: 0;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: 'Prompt', sans-serif;
+    margin-bottom: 4rem;
+    color: var(--dark);
 }
