--- a/css/styles.css
+++ b/css/styles.css
@@ -1634,9 +1634,12 @@ pre code {
 }
 
 .table {
-    width: 90% !important;
+    max-width: 600px;
+    width: 80%;
     margin-bottom: 1rem;
     color: #212529;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .table th,
@@ -1644,6 +1647,10 @@ pre code {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6;
+}
+
+.table td {
+    text-align: right;
 }
 
 .table thead th {
